# django

./: setup.cfg
django/apps/: config.py  registry.py
django/conf/: __init__.py  global_settings.py
django/contrib/auth/: models.py
django/contrib/contenttypes/tests/: tests.py
django/contrib/flatpages/: models.py
django/contrib/sites/: models.py
django/db/backends/: __init__.py
django/db/migrations/: loader.py  migration.py
django/db/models/: query.py
django/db/models/fields/: __init__.py
django/forms/: models.py
django/test/: testcases.py
django/utils/translation/: trans_real.py
docs/internals/contributing/writing-code/: coding-style.txt
docs/ref/: applications.txt
docs/topics/testing/: tools.txt
extras/: imports_example.py  install_git_hooks.sh
extras/git_hooks/: flake8_changed.py  isort_changed.py  run_all.py  run_all.sh
tests/: runtests.py
tests/admin_views/: tests.py
tests/apps/: apps.py  tests.py
tests/i18n/: tests.py
tests/postgres_tests/: test_array.py
tests/postgres_tests/migrations/: 0001_setup_extensions.py  0002_create_test_models.py
tests/prefetch_related/: tests.py
tests/regressiontests/model_formsets_regress/: tests.py
tests/settings_tests/: tests.py
tests/settings_tests/child_app/: models.py
tests/settings_tests/parent_app/: models.py
tests/test_utils/: tests.py
tests/urlpatterns_reverse/: tests.py  urls.py  views.py
