[bdist_rpm]
doc_files = docs extras AUTHORS INSTALL LICENSE README.rst
install-script = scripts/rpm-install.sh

[flake8]
exclude=build,.git,./django/utils/dictconfig.py,./django/utils/unittest.py,./django/utils/lru_cache.py,./django/utils/six.py,./django/conf/app_template/*,./django/dispatch/weakref_backports.py
ignore=E123,E128,E265,E501,W601
max-line-length = 119

[isort]
skip = build,.git,./django/utils/dictconfig.py,./django/utils/unittest.py,./django/utils/lru_cache.py,./django/utils/six.py,./django/conf/app_template/*,./django/dispatch/weakref_backports.py
known_third_party = bcrypt
known_first_party = django
line_length = 119
multi_line_output = 4
order_by_type = true
combine_as_imports = true

[metadata]
license-file = LICENSE

[wheel]
universal = 1
